--- a/resources/app-templates/leocdp-admin/modules/activation/data-touchpoint-list.html
+++ b/resources/app-templates/leocdp-admin/modules/activation/data-touchpoint-list.html
@@ -2,7 +2,7 @@
     <div class="col-lg-9">
         <h5 class="page-header" id="page_breadcrumb" > </h5>
     </div>
-    <div class="col-lg-3 text-center" style="padding: 10px">
+    <div class="col-lg-3 text-right" style="padding: 10px">
     	<button type="button" class="btn btn-do-now" onclick="location.reload()" title="Refresh Profile List" > 
     		<i class="fa fa-refresh" aria-hidden="true"></i> Refresh
     	</button>
