--- a/resources/app-templates/leocdp-admin/modules/analytics/data-science-notebooks.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/data-science-notebooks.html
@@ -5,7 +5,7 @@
     <div class="col-lg-10">
         <h5 class="page-header" id="page_breadcrumb" > </h5>
     </div>
-    <div class="col-lg-2 text-center" style="padding: 10px">
+    <div class="col-lg-2 text-right" style="padding: 10px">
 		<button type="button" class="btn btn-goto-router data-control-insert" onclick="" disabled="disabled">
 			<i class="fa fa-plus-circle" aria-hidden="true"></i> New Notebook
 		</button>
