--- a/resources/app-templates/leocdp-admin/modules/asset/group-details.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/group-details.html
@@ -5,7 +5,7 @@
     <div class="col-lg-10">
       <h5 class="page-header" id="page_breadcrumb" > </h5>
     </div>
-   	<div class="col-lg-2 text-center">
+   	<div class="col-lg-2 text-right">
      	<button type="button" class="btn btn-danger data-control-delete" id="btn_delete_group" style="display: ;" >
          	<i class="fa fa-trash" aria-hidden="true"></i> Delete
      	</button>
