--- a/resources/app-templates/leocdp-admin/modules/asset/group-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/group-editor.html
@@ -6,7 +6,7 @@
 	         <h5 class="page-header" id="page_breadcrumb" > </h5>
         </div>
        
-       	<div class="col-lg-3 row-centered ">
+       	<div class="col-lg-3 text-right">
              <button type="button" class="btn btn-info" onclick="history.back()">
               	<i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
               	Back
