--- a/resources/app-templates/leocdp-admin/modules/asset/item-product-import.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/item-product-import.html
@@ -5,7 +5,7 @@
 	<div class="col-lg-9">
 		<h5 class="page-header" id="page_breadcrumb" > </h5>
 	</div>
-	<div class="col-lg-3 text-center" style="padding: 10px">
+	<div class="col-lg-3 text-right" style="padding: 10px">
 		<button type="button" class="btn btn-info" onclick="history.back()">
         	<i class="fa fa-arrow-circle-left" aria-hidden="true"></i> Back
         </button>
@@ -19,7 +19,7 @@
 	 <div class="action-div col-lg-12">
         
          <div class="panel panel-info">
-         	<div class="panel-heading"> <label for="product_csv_file_uploader"> Product Data Importer for <span id="groupTitle"></span> </label> </div>
+         	<div class="panel-heading"> <label for="product_csv_file_uploader"> Product Data Importer for the group "<span id="groupTitle"> </span>" </label> </div>
 		 	<div class="panel-body table-responsive">
 		 	 	<p style="font-weight: bold;"> 
 		 	 		The uploaded file should be in CSV data format with commas separating different entries. <br>
