--- a/resources/app-templates/leocdp-admin/modules/asset/item-template-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/item-template-editor.html
@@ -12,7 +12,7 @@
         <div class="col-lg-9">
 	         <h5 class="page-header" id="page_breadcrumb" > </h5>
         </div>
-       	<div class="col-lg-3 text-center">
+       	<div class="col-lg-3 text-right">
             
 	         <button type="button" class="btn btn-info" onclick="history.back()">
                	<i class="fa fa-arrow-circle-left" aria-hidden="true"></i> Back
