--- a/resources/app-templates/leocdp-admin/common-widgets/confirm-delete-data-modal.html
+++ b/resources/app-templates/leocdp-admin/common-widgets/confirm-delete-data-modal.html
@@ -7,13 +7,11 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title"> Delete Data Confirmation </h4>
             </div>
-            <div class="modal-body">
-
+            <div class="modal-body row">
                 <div class="alert alert-danger">
                     <strong id="deletedInfoMsg">Do you want to delete data ?</strong><br>
                     <span id="deletedInfoTitle"></span>
                 </div>
-
                 <input id="delete_callback" type="hidden" name="delete_callback" value="">
             </div>
             <div class="modal-footer">
