--- a/resources/app-templates/leocdp-admin/common-widgets/leo-recommender.html
+++ b/resources/app-templates/leocdp-admin/common-widgets/leo-recommender.html
@@ -7,7 +7,7 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title text-center"> LEO Recommender </h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body row">
                 <div class="botui-app-container" id="iris_chatbot">
                     <bot-ui></bot-ui>
                 </div>
