--- a/resources/app-templates/leocdp-admin/common-widgets/query-filter-modal.html
+++ b/resources/app-templates/leocdp-admin/common-widgets/query-filter-modal.html
@@ -8,7 +8,7 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">New Content Filter</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body row">
                 <p>Some text in the modal.</p>
             </div>
             <div class="modal-footer">
