--- a/resources/app-templates/leocdp-admin/modules/activation/campaign-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/activation/campaign-editor.html
@@ -49,7 +49,7 @@
 						</div>
 						
 						<div class="form-group">
-							<div class="col-sm-10"  id="cp_activeQuery" >
+							<div class="col-sm-10"   >
 							
 							</div>
 						</div>
