--- a/resources/app-templates/leocdp-admin/modules/asset/group-list-in-category.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/group-list-in-category.html
@@ -2,7 +2,7 @@
     <div class="col-lg-10">
        <h5 class="page-header" id="page_breadcrumb" > </h5>
     </div>
-    <div class="col-lg-2 text-center" style="padding: 10px">
+    <div class="col-lg-2 text-right" style="padding: 10px">
         <button type="button" class="btn btn-goto-router data-control-insert" id="btn_new_group"  > 
         	<i class="fa fa-fw fa-plus-circle"></i> New Asset Group
 		</button>
