--- a/resources/app-templates/leocdp-admin/modules/asset/post-item-info.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/post-item-info.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="col-lg-3">
-            <div class="row text-center">
+            <div class="row text-right">
             
             	<button type="button" class="btn btn-info" onclick="history.back()">
                 	<i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
