--- a/resources/app-templates/leocdp-admin/modules/system/login-account-info.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-info.html
@@ -5,7 +5,7 @@
 		<div class="col-lg-10">
 			<h5 class="page-header" id="page_breadcrumb" > </h5>
 		</div>
-		<div class="col-lg-2 text-center" style="padding: 10px">
+		<div class="col-lg-2 text-right" style="padding: 10px">
 	     	<button type="button" class="btn btn-info" onclick="gotoLeoCdpRouter('defaultRouter')" title="Cancel"  > 
 	       		<i class="fa fa-arrow-circle-left" aria-hidden="true"></i> Cancel
 	       	</button>
