--- a/resources/app-templates/leocdp-admin/modules/system/login-account-list.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-list.html
@@ -2,7 +2,7 @@
     <div class="col-lg-10">
         <h5 class="page-header" id="page_breadcrumb" > </h5>
     </div>
-    <div class="col-lg-2 text-center" style="padding: 10px">
+    <div class="col-lg-2 text-right" style="padding: 10px">
     	<button type="button" class="btn btn-goto-router data-control-insert" onclick="gotoLeoCdpRouter('User_Login_Editor','newuser')" >  
     		<i class="fa fa-plus-circle" aria-hidden="true"></i> New Login Account </button>
     </div>
