--- a/example-data-tracking/basic-tracking.html
+++ b/example-data-tracking/basic-tracking.html
@@ -4,13 +4,16 @@
 <script>
     var leoCdpTrackedProducts = leoCdpTrackedProducts || [];
     leoCdpTrackedProducts.push({
+        name: "Customer Data Platforms",
         productId: "978-1119790112",
         idType: "ISBN",
         originalPrice: 25,
         salePrice: 25,
-        couponCode: "",
         quantity: 1,
         currency: "USD",
+        supplierId: "",
+        couponCode: "",
+        fullUrl : "http://example.com/example-data-tracking/basic-tracking.html"
     });
 </script>
 
@@ -67,13 +70,11 @@
             alt="Denim Jeans" style="width:100%">
         <h1>Customer Data Platforms</h1>
         <p class="price">$25</p>
-        <p>Use People Data to Transform the Future of Marketing Engagement.
-        </p>
-        <p><button>Add to Cart</button></p>
+        <p>Use People Data to Transform the Future of Marketing Engagement.</p>
+        <p><button class="leocdp-track-purchase" >Purchase</button></p>
     </div>
 
-   
-    
+
 </body>
 
 </html>
