--- a/example-data-tracking/tracking-simple-simple.html
+++ b/example-data-tracking/tracking-simple-simple.html
@@ -2,22 +2,20 @@
 <html>
 
 <head>
-    <title>Basic Tracking Demo for Leo CDP - Customer Data Platform book</title>
-
+    <title>Tracking Page-view for Leo CDP</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <style>
         .card {
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-            max-width: 300px;
+            max-width: 250px;
             margin: auto;
             text-align: center;
             font-family: arial;
         }
-
         .price {
             color: grey;
             font-size: 22px;
         }
-
         .card button {
             border: none;
             outline: 0;
@@ -29,37 +27,11 @@
             width: 100%;
             font-size: 18px;
         }
-
         .card button:hover {
             opacity: 0.7;
         }
     </style>
 
-    <!-- Data Model for LEO Observer JS -->
-    <script>
-        // to synch product data into Leo CDP using JavaScript
-        var leoCdpTrackedProducts = leoCdpTrackedProducts || [];
-        leoCdpTrackedProducts.push({
-            name: "Customer Data Platforms",
-            productId: "978-1119790112",
-            idType: "ISBN",
-            originalPrice: 25,
-            salePrice: 25,
-            quantity: 1,
-            currency: "USD",
-            supplierId: "",
-            couponCode: "",
-            fullUrl: "https://www.amazon.com/Customer-Data-Platforms-Transform-Engagement/dp/1119790115/"
-        });
-
-        // to synch user data into Leo CDP using JavaScript
-        var leoCdpUpdateUserInfo = {};
-        leoCdpUpdateUserInfo["loginId"] = "123";
-        leoCdpUpdateUserInfo["loginProvider"] = "facebook";
-        leoCdpUpdateUserInfo["email"] = "contact@uspa.tech";
-        leoCdpUpdateUserInfo["firstName"] = "Trieu";
-        leoCdpUpdateUserInfo["lastName"] = "Nguyen";
-    </script>
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
             w[l] = w[l] || []; w[l].push({
@@ -70,22 +42,23 @@
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-5FFCFND');</script>
     <!-- End Google Tag Manager -->
+
 </head>
 
 <body>
-
-    <h2 style="text-align:center">Product Card</h2>
-
     <div class="card">
         <img src="https://images-na.ssl-images-amazon.com/images/I/41gUgegbS3L._SX336_BO1,204,203,200_.jpg"
             alt="Denim Jeans" style="width:100%">
-        <h1>Customer Data Platforms</h1>
+        <h3>Customer Data Platforms</h3>
         <p class="price">$25</p>
         <p>Use People Data to Transform the Future of Marketing Engagement.</p>
-        <p><button class="leocdp-track-purchase">Purchase</button></p>
+        <p><button id="btn-add-to-cart" onclick="processViewItem(this)">View Item</button></p>
     </div>
-
-
+    <script>
+        // go to the page tracking-events-ecommerce.html
+        function processViewItem(node) {
+            location.href = "tracking-events-ecommerce.html";
+        }
+    </script>
 </body>
-
 </html>
