--- a/example-data-tracking/tracking-events-ecommerce.html
+++ b/example-data-tracking/tracking-events-ecommerce.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Basic Tracking Demo for Leo CDP - Customer Data Platform book</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -11,10 +12,12 @@
             text-align: center;
             font-family: arial;
         }
+
         .price {
             color: grey;
             font-size: 22px;
         }
+
         .card button {
             border: none;
             outline: 0;
@@ -26,22 +29,21 @@
             width: 100%;
             font-size: 18px;
         }
+
         .card button:hover {
             opacity: 0.7;
         }
     </style>
 
     <!-- Google Tag Manager -->
-    <script>(function (w, d, s, l, i) {
-            w[l] = w[l] || []; w[l].push({
-                'gtm.start':
-                    new Date().getTime(), event: 'gtm.js'
-            }); var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-5FFCFND');</script>
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-5FFCFND');</script>
     <!-- End Google Tag Manager -->
 </head>
+
 <body>
 
     <div class="card">
@@ -70,14 +72,6 @@
             couponCode: "",
             fullUrl: "https://www.amazon.com/Customer-Data-Platforms-Transform-Engagement/dp/1119790115/"
         });
-
-        // to synch user data into Leo CDP using JavaScript
-        var leoCdpUpdateUserInfo = {};
-        leoCdpUpdateUserInfo["loginId"] = "123";
-        leoCdpUpdateUserInfo["loginProvider"] = "facebook";
-        leoCdpUpdateUserInfo["email"] = "contact@uspa.tech";
-        leoCdpUpdateUserInfo["firstName"] = "Trieu";
-        leoCdpUpdateUserInfo["lastName"] = "Nguyen";
     </script>
 
     <script>
@@ -85,7 +79,7 @@
         function processAddToCart(node) {
             alert('The add-to-cart event is tracked!');
             $(node).hide();
-            $('#btn-purchase').show();
+            $('#btn-purchase').show().css("background-color", "blue");
         }
         //
         function processPurchasing(node) {
@@ -97,4 +91,5 @@
         }
     </script>
 </body>
+
 </html>
